load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["server.go"],
    importpath = "github.com/wildarch/backwarder/server",
    visibility = ["//visibility:private"],
    deps = ["@com_github_gorilla_websocket//:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["server_test.go"],
    embed = [":go_default_library"],
)
